crates/gox-tests/test_data/typecheck/28_interface_not_satisfied.gox
// +vm
// Test interface NOT satisfied - missing method
package main

type Reader interface {
    Read() int
}

type File struct {
    data int
}

// File has no Read method

func main() {
    var r Reader
    f := File{data: 42}
    
    // File does NOT implement Reader (no Read method)
    r = f  // error: File doesn't implement Reader
    _ = r
}

=== typecheck ===
E2601
